[workspace]
resolver = "2"
members = [
  "packages/ui",
  "packages/hikmah_core",
  "packages/web",
  "packages/desktop",
  "packages/mobile",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
dioxus-logger = "0.7.2"
tracing = "0.1.44"

# workspace
ui = { path = "packages/ui" }
hikmah_core = { path = "packages/hikmah_core" }
